@@ -2,8 +2,8 @@
 ## _Yet another ORM_
 
 ![Build Status](https://travis-ci.org/joemccann/dillinger.svg?branch=master)
-[![Maven metadata URL](https://img.shields.io/maven-metadata/v?color=blue&logo=apache-maven&metadataUrl=https%3A%2F%2Frepo1.maven.org%2Fmaven2%2Forg%2Fyorm%2Fyorm%2Fmaven-metadata.xml)](https://mvnrepository.com/artifact/org.yorm/yorm) 
-![Supported JVM Versions](https://img.shields.io/badge/JVM-17-success.svg?style=flat&logo=Java) 
+[![Maven metadata URL](https://img.shields.io/maven-metadata/v?color=blue&logo=apache-maven&metadataUrl=https%3A%2F%2Frepo1.maven.org%2Fmaven2%2Forg%2Fyorm%2Fyorm%2Fmaven-metadata.xml)](https://mvnrepository.com/artifact/org.yorm/yorm)
+![Supported JVM Versions](https://img.shields.io/badge/JVM-17-success.svg?style=flat&logo=Java)
 [![License](https://img.shields.io/github/license/naynecoder/yorm?style=flat&logo=apache&color=success)](https://www.apache.org/licenses/LICENSE-2.0)
 
 Yorm is a basic ORM-alike framework designed to work with Java Records, without class generation, neither annotations.
@@ -47,6 +47,9 @@ When a Java Record is operated with **Yorm**, a reflection inspection will came 
 - [Slf4j] - Logging is usually useful
 
 And that's it, the **Yorm** lies heavily on Java 17 Records and Reflections.
+
+**Yorm** has been tested with Snowflake, and it works as long as the table
+has no primary keys, and the Jvm is run with the option *--add-opens java.base/java.nio=ALL-UNNAMED*
 
 ## How to use it with examples
 
@@ -195,9 +198,9 @@ You can easily add Yorm to your project with
 
 ```xml
 <dependency>
-    <groupId>org.yorm</groupId>
-    <artifactId>yorm</artifactId>
-    <version>0.0.1</version>
+  <groupId>org.yorm</groupId>
+  <artifactId>yorm</artifactId>
+  <version>0.0.3</version>
 </dependency>
 ```
 
